--- a/aspApp/aspApp/Views/User/AddUser.cshtml
+++ b/aspApp/aspApp/Views/User/AddUser.cshtml
@@ -9,12 +9,32 @@
         closeModal()
     }
 
-    function submit_formAddUser_OnClick() {
-        submit_formAddUser()
+    //function submit_formAddUser_OnClick() {
+    //    //submited_form()
+    //    //$(function () {
+    //    //    $('#formAddUser').on('submit', function (e) {
+
+    //    //        $.ajax({
+    //    //            type: 'post',
+    //    //            url: 'User/AddUser/',
+    //    //            data: $('#formAddUser').serialize(),
+    //    //            success: function () {
+    //    //                alert("Email has been sent!");
+    //    //            }
+    //    //        });
+    //    //        e.preventDefault();
+    //    //    });
+    //    //});
+
+    //    submit_formAddUser()
+    //}
+
+    function submitedForm() {
+        submited_form()
     }
 </script>
 
-<form asp-action="AddUser" method="post" id="formAddUser">
+<form asp-action="AddUser" method="post" id="formAddUser" onsubmit="return AjaxPost(this);">
     <div class="popup_div shadow-2 modal_none" id="modalAdd">
         <div>
             <a class="close_modal" onclick="closeModalButton()">X</a>
@@ -33,6 +53,8 @@
             <input asp-for="@Model.Birthday" />
         </div>
 
-        <a class="action_good" onclick="submit_formAddUser_OnClick()">Add</a>
+        @*<a class="action_good" onclick="$("#myForm").submit();">Add</a>*@
+        @*<input class="action_good" type="submit" value="Add" />*@
+        <a class="action_good" onclick="submitedForm()">Add</a>
     </div>
 </form>
