--- a/aspApp/aspApp/Views/User/Index.cshtml
+++ b/aspApp/aspApp/Views/User/Index.cshtml
@@ -11,6 +11,7 @@
 
 </div>
 
+@*<script src="http://malsup.github.com/jquery.form.js"></script>*@
 <script src="~/js/site.js"></script>
 @*showInPopUp('@Url.Action("AddOrEdit", "User", null, Context.Request.Scheme)', 'New user!')*@
 <script>
