--- a/aspApp/aspApp/wwwroot/css/style.css
+++ b/aspApp/aspApp/wwwroot/css/style.css
@@ -52,7 +52,7 @@
         .index_div_content ul li {
             display: block;
             float: left;
-            width: auto;
+            max-width: calc(calc(100% / 6) - 25.5px);
             min-width: calc(calc(100% / 6) - 25.5px);
             padding: 10px;
             margin: 0px 5px 5px 0px;
