--- a/aspApp/aspApp/Views/User/DeleteUser.cshtml
+++ b/aspApp/aspApp/Views/User/DeleteUser.cshtml
@@ -8,6 +8,17 @@
     function closeModalButton() {
         closeModal()
     }
+
+    $(function () {
+        $('#submitDelete').on('click', function (evt) {
+            evt.preventDefault();
+            $.post('User/DeleteUser', $('#formDeleteUser').serialize(), function () {
+                //alert('Posted using jQuery');
+
+                submited_form()
+            });
+        });
+    });
 </script>
 
 <form asp-action="DeleteUser" method="post" id="formDeleteUser">
@@ -29,6 +40,6 @@
             <input asp-for="@Model.Birthday" readonly />
         </div>
 
-        <a class="action_bad">Delete</a>
+        <a class="action_bad" id="submitDelete">Delete</a>
     </div>
 </form>
