--- a/aspApp/aspApp/wwwroot/css/style.css
+++ b/aspApp/aspApp/wwwroot/css/style.css
@@ -52,8 +52,8 @@
         .index_div_content ul li {
             display: block;
             float: left;
-            max-width: calc(calc(100% / 6) - 25.5px);
-            min-width: calc(calc(100% / 6) - 25.5px);
+            max-width: calc(calc(100% / 4) - 25.5px);
+            min-width: calc(calc(100% / 4) - 25.5px);
             padding: 10px;
             margin: 0px 5px 5px 0px;
             background-color: gainsboro;
@@ -139,7 +139,7 @@
     margin: 20px auto;
     padding: 10px;
     min-width: auto;
-    max-width: 350px;
+    max-width: 400px;
     background-color: white;
 }
 
@@ -219,4 +219,5 @@
     }
 
 .footer_div {
+    text-align: center;
 }
