--- a/aspApp/aspApp/Views/User/UserList.cshtml
+++ b/aspApp/aspApp/Views/User/UserList.cshtml
@@ -47,7 +47,7 @@
         @foreach (var item in Model)
         {
             <li>
-                <div>
+                <div class="ul_item_div">
                     <div>
                         <label for="">#: @x</label>
                         <label for="">Id: @item.Id</label>
