--- a/aspApp/aspApp/Views/Shared/_Layout.cshtml
+++ b/aspApp/aspApp/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
 
     <header>
         <div class="header_div shadow back-primarycolor pad-10">
-            <h1>Titulo Header</h1>
+            <h1>Title Header</h1>
         </div>
     </header>
 
